# gconjugue

./: .gitignore  AUTHORS  ChangeLog  LeiaMe.md  Makefile.am  NEWS  README  README.md  configure.ac
data/: BancoDeVerbos  conjugar.1  gconjugue.1  gconjugue.desktop  gconjugue.xpm  paradigms_and_verbs
po/: LINGUAS  POTFILES.in  es.po  pt.po  pt_BR.po
src/: Makefile.am  callbacks.c  callbacks.h  conjugue.c  conjugue.h  gmain.c  interface.c  interface.h  main.c
